--- a/Pages/Account/Orders.razor
+++ b/Pages/Account/Orders.razor
@@ -14,14 +14,36 @@
                     </div>
                     <div class="order-card__main-block">
                         <div class="main-block__products-block">
-                            <div class="products-block__product-card">
-                                <a class="product-card__image" href="#" aria-label="Ссылка перехода на карточку товара NIKE_Air_Zoom_Pegasus"><img src="./images/orders/NIKE_Air_Zoom_Pegasus1-removebg-preview.webp" alt="NIKE_Air_Zoom_Pegasus"></a>
-                                <a class="product-card__name" href="#" aria-label="Ссылка перехода на карточку товара NIKE_Air_Zoom_Pegasus">Кроссовки NIKE Air Zoom Pegasus</a>
-                                <div class="product-card__price-block hasDiscount">
-                                    <!-- hasDiscount -->
-                                    <span class="price-block__price">5600 ₽</span>
-                                    <span class="price-block__discount-price">5000 ₽</span>
-                                    <span class="price-block__count">x 1</span>
+                            <div class="main-block__products-cards">
+                                <div class="products-block__product-card">
+                                    <a class="product-card__image" href="#" aria-label="Ссылка перехода на карточку товара NIKE_Air_Zoom_Pegasus"><img src="./images/orders/NIKE_Air_Zoom_Pegasus1-removebg-preview.webp" alt="NIKE_Air_Zoom_Pegasus"></a>
+                                    <a class="product-card__name" href="#" aria-label="Ссылка перехода на карточку товара NIKE_Air_Zoom_Pegasus">Кроссовки NIKE Air Zoom Pegasus</a>
+                                    <div class="product-card__price-block hasDiscount">
+                                        <!-- hasDiscount -->
+                                        <span class="price-block__price">5600 ₽</span>
+                                        <span class="price-block__discount-price">5000 ₽</span>
+                                        <span class="price-block__count">x 1</span>
+                                    </div>
+                                </div>
+                                <div class="products-block__product-card">
+                                    <a class="product-card__image" href="#" aria-label="Ссылка перехода на карточку товара NIKE_Air_Zoom_Pegasus"><img src="./images/orders/NIKE_Air_Zoom_Pegasus1-removebg-preview.webp" alt="NIKE_Air_Zoom_Pegasus"></a>
+                                    <a class="product-card__name" href="#" aria-label="Ссылка перехода на карточку товара NIKE_Air_Zoom_Pegasus">Кроссовки NIKE Air Zoom Pegasus</a>
+                                    <div class="product-card__price-block hasDiscount">
+                                        <!-- hasDiscount -->
+                                        <span class="price-block__price">5600 ₽</span>
+                                        <span class="price-block__discount-price">5000 ₽</span>
+                                        <span class="price-block__count">x 1</span>
+                                    </div>
+                                </div>
+                                <div class="products-block__product-card">
+                                    <a class="product-card__image" href="#" aria-label="Ссылка перехода на карточку товара NIKE_Air_Zoom_Pegasus"><img src="./images/orders/NIKE_Air_Zoom_Pegasus1-removebg-preview.webp" alt="NIKE_Air_Zoom_Pegasus"></a>
+                                    <a class="product-card__name" href="#" aria-label="Ссылка перехода на карточку товара NIKE_Air_Zoom_Pegasus">Кроссовки NIKE Air Zoom Pegasus</a>
+                                    <div class="product-card__price-block hasDiscount">
+                                        <!-- hasDiscount -->
+                                        <span class="price-block__price">5600 ₽</span>
+                                        <span class="price-block__discount-price">5000 ₽</span>
+                                        <span class="price-block__count">x 1</span>
+                                    </div>
                                 </div>
                             </div>
                             <div class="main-block__block-info">
