--- a/Pages/_Imports.razor
+++ b/Pages/_Imports.razor
@@ -1,5 +1,6 @@
 ﻿@using System.Net.Http
 @using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
@@ -17,3 +18,4 @@
 @using Microsoft.AspNetCore.Mvc
 @using WebStore.Services
 @using WebStore.Domain.Consts 
+@using Microsoft.EntityFrameworkCore;
