--- a/Pages/Account/Cart.razor.css
+++ b/Pages/Account/Cart.razor.css
@@ -14,6 +14,29 @@
     display: flex;
     justify-content: flex-start;
     gap: 2em; }
+  .cart__empty-image {
+    margin-top: 40px;
+    margin: 100px auto 0px;
+    align-self: center;
+    justify-self: center;
+    height: 150px;
+    width: 150px; }
+    .cart__empty-image img {
+      height: 100%;
+      width: 100%; }
+  .cart__empty-title {
+    margin: 20px 7px 7px;
+    text-align: center;
+    align-self: center;
+    justify-self: center;
+    font-size: 20px;
+    font-weight: 600; }
+  .cart__empty-message {
+    margin: 0px 7px;
+    font-size: 15px;
+    align-self: center;
+    justify-self: center;
+    text-align: center; }
 
 .main-block__products-cards {
   justify-content: center;
@@ -52,14 +75,56 @@
   justify-items: center;
   align-content: center; }
 
-.product-card__image img {
-  object-fit: contain;
-  height: 10em;
-  width: 10em;
-  background-color: #f6f6f6; }
+.products-cards__select-all-checkbox {
+  display: flex;
+  cursor: pointer;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5em;
+  margin-bottom: 0;
+  font-size: 15px;
+  margin: 20px 30px;
+  align-self: flex-start; }
+
+.select-checkbox input {
+  display: none; }
+
+.select-checkbox span {
+  position: relative;
+  display: inline-block;
+  width: 20px;
+  cursor: pointer;
+  height: 20px;
+  box-shadow: 0px 0px 1px black;
+  border-radius: 1px; }
+  .select-checkbox span::before {
+    content: '';
+    position: absolute;
+    top: 25%;
+    left: 24%;
+    transform: translate(-50%, -50%);
+    width: 11px;
+    height: 7px;
+    border-right: 3px solid black;
+    border-top: 3px solid black;
+    transform: rotate(135deg);
+    transition: 0.15s all ease;
+    opacity: 0; }
+
+.select-checkbox input:checked + span::before {
+  opacity: 1; }
+
+.product-card__image {
+  cursor: pointer; }
+  .product-card__image img {
+    object-fit: contain;
+    height: 10em;
+    width: 10em;
+    background-color: #f6f6f6; }
 
 .product-card__product-info {
   display: flex;
+  justify-self: flex-start;
   flex-direction: column; }
 
 .product-card__counter-block {
@@ -68,7 +133,8 @@
   justify-content: center;
   align-items: center; }
   .product-card__counter-block span {
-    display: none;
+    display: block;
+    font-size: 15px;
     transform: translateY(-7px); }
 
 .product-card__block-price {
@@ -107,6 +173,7 @@
   background-color: transparent;
   cursor: pointer; }
   .counter__minus::before {
+    cursor: pointer;
     content: '';
     top: 9px;
     left: 2.5px;
@@ -134,6 +201,7 @@
     background-color: black; }
   .counter__plus::before {
     cursor: pointer;
+    cursor: pointer;
     position: absolute;
     content: '';
     right: 2.5px;
@@ -146,28 +214,31 @@
 .product-info__name {
   margin-bottom: 1em;
   color: black;
-  font-size: 18px; }
+  font-size: 18px;
+  cursor: pointer; }
   .product-info__name a {
     color: black; }
 
-.product-info__brand {
+.product-info__color {
   font-size: 15px;
   margin-bottom: 0.3em;
   opacity: 0.7; }
 
-.product-info__color {
+.product-info__size {
   font-size: 15px;
   opacity: 0.7; }
 
 .icons-block__favorites-icon {
-  opacity: 0.6; }
+  opacity: 0.6;
+  cursor: pointer; }
   .icons-block__favorites-icon:hover {
     opacity: 1; }
   .icons-block__favorites-icon img {
     height: 1.7em; }
 
 .icons-block__cart-icon {
-  opacity: 0.6; }
+  opacity: 0.6;
+  cursor: pointer; }
   .icons-block__cart-icon:hover {
     opacity: 1; }
   .icons-block__cart-icon img {
@@ -178,6 +249,7 @@
   justify-content: space-between; }
 
 .information-block__button {
+  cursor: pointer;
   border-radius: 10px;
   color: white;
   background-color: black;
@@ -231,7 +303,7 @@
     gap: 1em; }
   .products-cards__product-card {
     max-width: 100%;
-    gap: 0.5em;
+    gap: 1em;
     padding: 1em; }
   .information-block__info {
     width: 100%;
@@ -284,6 +356,9 @@
     margin-bottom: 0.4em; } }
 
 @media (max-width: 400px) {
+  .cart__empty-image {
+    height: 125px !important;
+    width: 125px !important; }
   .cart__title {
     margin-left: 1em; }
   .cart__main-block {
