--- a/Pages/Account/Cart.razor.scss
+++ b/Pages/Account/Cart.razor.scss
@@ -1,25 +1,60 @@
 .cart {
     width: 100%;
-    
+
     &__container {
-       max-width: 85em;
-       margin: 0 auto;
-       padding: 3em 1em;
+        max-width: 85em;
+        margin: 0 auto;
+        padding: 3em 1em;
     }
-    &__block {}
+
+    &__block {
+    }
+
     &__title {
-       margin-left: 1.7em;
-       margin-bottom: 1.2em;
-       font-size: 24px;
-       line-height: 1.5em;
-       text-align: start;
+        margin-left: 1.7em;
+        margin-bottom: 1.2em;
+        font-size: 24px;
+        line-height: 1.5em;
+        text-align: start;
     }
-    &__main-block {  
-       display: flex;
-       justify-content: flex-start;
-       gap: 2em;
+
+    &__main-block {
+        display: flex;
+        justify-content: flex-start;
+        gap: 2em;
     }
- }
+
+    &__empty-image {
+        margin-top: 40px;
+        margin: 100px auto 0px;
+        align-self: center;
+        justify-self: center;
+        height: 150px;
+        width: 150px;
+
+        img {
+            height: 100%;
+            width: 100%;
+        }
+    }
+
+    &__empty-title {
+        margin: 20px 7px 7px;
+        text-align: center;
+        align-self: center;
+        justify-self: center;
+        font-size: 20px;
+        font-weight: 600;
+    }
+
+    &__empty-message {
+        margin: 0px 7px;
+        font-size: 15px;
+        align-self: center;
+        justify-self: center;
+        text-align: center;
+    }
+}
  .main-block {
     &__products-cards {
        justify-content: center;
@@ -48,68 +83,126 @@
        border: 1px solid rgb(179, 179, 179);
     }
  }
- .products-cards {
+.products-cards {
     &__product-card {
-       width: 100%;
-       max-width: 50em;
-       gap: 1.5em;
-       padding: 2em 2em;
-       border-top: 1px solid rgb(179, 179, 179);
-       display: grid;
-       grid-template-columns: min-content minmax(130px,1fr) min-content minmax(100px,max-content) min-content;
-       justify-content: center;
-       align-items: center;
-       justify-items: center;
-       align-content: center;
+        width: 100%;
+        max-width: 50em;
+        gap: 1.5em;
+        padding: 2em 2em;
+        border-top: 1px solid rgb(179, 179, 179);
+        display: grid;
+        grid-template-columns: min-content minmax(130px,1fr) min-content minmax(100px,max-content) min-content;
+        justify-content: center;
+        align-items: center;
+        justify-items: center;
+        align-content: center;
     }
- }
- .product-card {
+
+    &__select-all-checkbox {
+        display: flex;
+        cursor: pointer;
+        justify-content: center;
+        align-items: center;
+        gap: 0.5em;
+        margin-bottom: 0;
+        font-size: 15px;
+        margin: 20px 30px;
+        align-self: flex-start;
+    }
+}
+.select-checkbox {
+    input {
+        display: none;
+    }
+
+    span {
+        position: relative;
+        display: inline-block;
+        width: 20px;
+        cursor: pointer;
+        height: 20px;
+        box-shadow: 0px 0px 1px black;
+        border-radius: 1px;
+
+        &::before {
+            content: '';
+            position: absolute;
+            top: 25%;
+            left: 24%;
+            transform: translate(-50%, -50%);
+            width: 11px;
+            height: 7px;
+            border-right: 3px solid black;
+            border-top: 3px solid black;
+            transform: rotate(135deg);
+            transition: 0.15s all ease;
+            opacity: 0;
+        }
+    }
+
+    input:checked + span::before {
+        opacity: 1;
+    }
+}
+.product-card {
     &__image {
-       img{
-          object-fit: contain;
-          height: 10em;
-          width: 10em;
-          background-color: rgb(246,246,246);
-       }
+        cursor: pointer;
+
+        img {
+            object-fit: contain;
+            height: 10em;
+            width: 10em;
+            background-color: rgb(246,246,246);
+        }
     }
-    &__product-info{
-       display: flex;
-       flex-direction: column;
+
+    &__product-info {
+        display: flex;
+        justify-self: flex-start;
+        flex-direction: column;
     }
-    &__counter-block{
-       display: flex;
-       flex-direction: column;
-       justify-content: center;
-       align-items: center;
- 
-       span{
-          display: none;
-          transform: translateY(-7px);  
-       }
+
+    &__counter-block {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        span {
+            display: block;
+            font-size: 15px;
+            transform: translateY(-7px);
+        }
     }
+
     &__block-price {
-       font-size: 16px;
- 
-       &.hasDiscount{
-          .block-price__price{
-             text-decoration: line-through;
-             text-align: center;
-          }
-          .block-price__discount-price{
-             display: block;
-             text-align: center;
-          }
-       }
+        font-size: 16px;
+
+        &.hasDiscount {
+            .block-price__price {
+                text-decoration: line-through;
+                text-align: center;
+            }
+
+            .block-price__discount-price {
+                display: block;
+                text-align: center;
+            }
+        }
     }
+
     &__icons-block {
-       display: flex;
-       flex-direction: column;
-       gap: 0.5em;
-       height: 90%;
-       justify-content: space-between;
+        display: flex;
+        flex-direction: column;
+        gap: 0.5em;
+        height: 90%;
+        justify-content: space-between;
     }
- }
+}
  .counter-block{
+    &__price{
+
+    }
     &__counter{
        height: calc(39.6px + 18.4px + 15px);
  
@@ -124,119 +217,133 @@
        }
     }
  }
- .counter{
-    &__minus{
-       height: 20px;
-       top: 30px;
-       left: 7px;
-       width: 20px;
-       position: relative;
-       background-color: transparent;
-       cursor: pointer;
-       
-       &::before{
-          content: '';
-          top: 9px;
-          left: 2.5px;
-          height: 2.5px;
-          width: 15px;
-          background-color: black;
-          position: absolute;
-       }
+.counter {
+    &__minus {
+        height: 20px;
+        top: 30px;
+        left: 7px;
+        width: 20px;
+        position: relative;
+        background-color: transparent;
+        cursor: pointer;
+
+        &::before {
+            cursor: pointer;
+            content: '';
+            top: 9px;
+            left: 2.5px;
+            height: 2.5px;
+            width: 15px;
+            background-color: black;
+            position: absolute;
+        }
     }
-    &__plus{
-       height: 20px;
-       top: -30px;
-       right: calc(-100% + 20px + 7px);
-       width: 20px;
-       position: relative;
-       background-color: transparent;
-       cursor: pointer;
- 
-       &::after{
-          cursor: pointer;
-          content: '';
-          position: absolute;
-          right: 2.5px;
-          top: 9px;
-          height: 3px;
-          width: 15px;
-          background-color: black;
-       }
-       &::before{
-          cursor: pointer;
-          position: absolute;
-          content: '';
-          right: 2.5px;
-          top: 9px;
-          transform: rotate(90deg);
-          height: 2.5px;
-          width: 15px;
-          background-color: black;
-       }
+
+    &__plus {
+        height: 20px;
+        top: -30px;
+        right: calc(-100% + 20px + 7px);
+        width: 20px;
+        position: relative;
+        background-color: transparent;
+        cursor: pointer;
+
+        &::after {
+            cursor: pointer;
+            content: '';
+            position: absolute;
+            right: 2.5px;
+            top: 9px;
+            height: 3px;
+            width: 15px;
+            background-color: black;
+        }
+
+        &::before {
+            cursor: pointer;
+            cursor: pointer;
+            position: absolute;
+            content: '';
+            right: 2.5px;
+            top: 9px;
+            transform: rotate(90deg);
+            height: 2.5px;
+            width: 15px;
+            background-color: black;
+        }
     }
- }
- .product-info{
+}
+.product-info {
     &__name {
-       margin-bottom: 1em;
-       color: black;
-       font-size: 18px;
- 
-       a{
-          color: black;
-       }
+        margin-bottom: 1em;
+        color: black;
+        font-size: 18px;
+        cursor: pointer;
+
+        a {
+            color: black;
+        }
     }
-     &__brand {
-       font-size: 15px;
-       margin-bottom: 0.3em;
-       opacity: 0.7;
+
+    &__color {
+        font-size: 15px;
+        margin-bottom: 0.3em;
+        opacity: 0.7;
     }
-     &__color {
-       font-size: 15px;
-       opacity: 0.7;
+
+    &__size {
+        font-size: 15px;
+        opacity: 0.7;
     }
- }
- .icons-block {
+}
+.icons-block {
     &__favorites-icon {
-       opacity: 0.6;
-   
-       &:hover{
-         opacity: 1;
-       }
-       img{
-         height: 1.7em;   
-       }
+        opacity: 0.6;
+        cursor: pointer;
+
+        &:hover {
+            opacity: 1;
+        }
+
+        img {
+            height: 1.7em;
+        }
     }
+
     &__cart-icon {
-       opacity: 0.6;
-   
-       &:hover{
-         opacity: 1;
-       }
-       img{
-         height: 1.7em;   
-       }
+        opacity: 0.6;
+        cursor: pointer;
+
+        &:hover {
+            opacity: 1;
+        }
+
+        img {
+            height: 1.7em;
+        }
     }
- }
- .information-block {
+}
+.information-block {
     &__info {
-       display: flex;
-       justify-content: space-between;
+        display: flex;
+        justify-content: space-between;
     }
+
     &__button {
-       border-radius: 10px;
-       color: white;
-       background-color: black;
-       text-align: center;
-       white-space: nowrap;
-       width: 100%;
-       padding: 1.3em 0em;
- 
-       &:hover{
-          color: white;
-       }
+        cursor: pointer;
+        border-radius: 10px;
+        color: white;
+        background-color: black;
+        text-align: center;
+        white-space: nowrap;
+        width: 100%;
+        padding: 1.3em 0em;
+
+        &:hover {
+            color: white;
+        }
     }
- }
+}
 @media (max-width: 1150px){
    .cart {
       &__container {
@@ -308,7 +415,7 @@
    .products-cards {
       &__product-card {
          max-width: 100%;
-         gap: 0.5em;
+         gap: 1em;
          padding: 1em;
       }
    }
@@ -390,17 +497,23 @@
     }
 }
 @media (max-width: 400px){
-    .cart{
-       &__title{
-          margin-left: 1em;
-       }
-       &__main-block{
-          gap: 0;
+    .cart {
+        &__empty-image {
+            height: 125px !important;
+            width: 125px !important;
+        }
 
-         :last-child.products-cards__product-card{
-            border-bottom: 1px solid rgb(179, 179, 179);
-         }
-       }
+        &__title {
+            margin-left: 1em;
+        }
+
+        &__main-block {
+            gap: 0;
+
+            :last-child.products-cards__product-card {
+                border-bottom: 1px solid rgb(179, 179, 179);
+            }
+        }
     }
     .main-block{
        &__products-cards{
