--- a/Pages/Account/Favorites.razor.css
+++ b/Pages/Account/Favorites.razor.css
@@ -20,6 +20,28 @@
     margin-bottom: 1.5em;
     font-size: 24px;
     line-height: 1.5em; }
+  .favorites__empty-image {
+    margin-top: 40px;
+    align-self: center;
+    justify-self: center;
+    height: 150px;
+    width: 150px; }
+    .favorites__empty-image img {
+      height: 100%;
+      width: 100%; }
+  .favorites__empty-title {
+    margin: 20px 7px 10px;
+    text-align: center;
+    align-self: center;
+    justify-self: center;
+    font-size: 20px;
+    font-weight: 600; }
+  .favorites__empty-message {
+    margin: 0px 7px;
+    font-size: 15px;
+    align-self: center;
+    justify-self: center;
+    text-align: center; }
   .favorites__product-cards {
     display: grid;
     width: 100%;
@@ -28,7 +50,7 @@
     display: grid;
     grid-template-rows: 1fr;
     justify-self: center;
-    width: 100%;
+    width: min-content;
     height: 100%;
     padding: 0.7em; }
   .favorites__image-block {
@@ -38,17 +60,20 @@
     position: relative;
     width: 100%;
     background-color: #f6f6f6; }
-  .favorites__image img {
-    padding: 1em;
-    object-fit: contain;
-    height: 30em;
-    width: 30em;
-    background-color: #f6f6f6; }
+  .favorites__image {
+    cursor: pointer; }
+    .favorites__image img {
+      padding: 1em;
+      object-fit: contain;
+      height: 30em;
+      width: 30em;
+      background-color: #f6f6f6; }
   .favorites__favorites-icon {
     position: absolute;
     top: 10px;
     right: 10px;
-    opacity: 0.6; }
+    opacity: 0.6;
+    cursor: pointer; }
     .favorites__favorites-icon:hover {
       opacity: 1; }
     .favorites__favorites-icon img {
@@ -57,7 +82,8 @@
     position: absolute;
     top: 40px;
     right: 11.5px;
-    opacity: 0.6; }
+    opacity: 0.6;
+    cursor: pointer; }
     .favorites__cart-icon:hover {
       opacity: 1; }
     .favorites__cart-icon img {
@@ -75,7 +101,8 @@
   .favorites__name {
     margin: 1em 0em 0.3em;
     font-size: 1.2em;
-    color: black; }
+    color: black;
+    cursor: pointer; }
     .favorites__name a {
       color: black; }
   .favorites__block-price.hasDiscount .block-price__price {
@@ -130,6 +157,9 @@
     width: 25em; } }
 
 @media (max-width: 440px) {
+  .favorites__empty-image {
+    height: 125px;
+    width: 125px; }
   .favorites__product-cards {
     grid-template-columns: repeat(auto-fit, minmax(290px, 1fr)); }
   .favorites__image img {
