--- a/Pages/Account/Favorites.razor.scss
+++ b/Pages/Account/Favorites.razor.scss
@@ -3,116 +3,165 @@
     justify-content: center;
     align-items: center;
     width: 100%;
- 
+
     &__container {
-       margin: 0 auto;
-       width: 100em;
-       padding: 3em 0em;
+        margin: 0 auto;
+        width: 100em;
+        padding: 3em 0em;
     }
+
     &__block {
-       display: flex;
-       width: 100%;
-       justify-content: center;
-       align-items: flex-start;
-       flex-direction: column;
-       padding: 0em 2em;
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        align-items: flex-start;
+        flex-direction: column;
+        padding: 0em 2em;
     }
+
     &__title {
-       margin-left: 1.5em;
-       align-self: flex-start;
-       margin-bottom: 1.5em;
-       font-size: 24px;
-       line-height: 1.5em;
+        margin-left: 1.5em;
+        align-self: flex-start;
+        margin-bottom: 1.5em;
+        font-size: 24px;
+        line-height: 1.5em;
     }
+
+    &__empty-image {
+        margin-top: 40px;
+        align-self: center;
+        justify-self: center;
+        height: 150px;
+        width: 150px;
+
+        img {
+            height: 100%;
+            width: 100%;
+        }
+    }
+
+    &__empty-title {
+        margin: 20px 7px 10px;
+        text-align: center;
+        align-self: center;
+        justify-self: center;
+        font-size: 20px;
+        font-weight: 600;
+    }
+
+    &__empty-message {
+        margin: 0px 7px;
+        font-size: 15px;
+        align-self: center;
+        justify-self: center;
+        text-align: center;
+    }
+
     &__product-cards {
-       display: grid;
-       width: 100%;
-       grid-template-columns: repeat(auto-fit, minmax(440px, 1fr));
+        display: grid;
+        width: 100%;
+        grid-template-columns: repeat(auto-fit, minmax(440px, 1fr));
     }
-    &__product-card{
-       display: grid;
-       grid-template-rows: 1fr;
-       justify-self: center;
-       width: 100%;
-       height: 100%;
-       padding: 0.7em;
+
+    &__product-card {
+        display: grid;
+        grid-template-rows: 1fr;
+        justify-self: center;
+        width: min-content;
+        height: 100%;
+        padding: 0.7em;
     }
-    &__image-block{
-       display: flex;
-       justify-content: center;
-       align-items: center;
-       position: relative;
-       width: 100%;
-       background-color: rgb(246,246,246);
+
+    &__image-block {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        width: 100%;
+        background-color: rgb(246,246,246);
     }
+
     &__image {
-       img{
-          padding: 1em;
-          object-fit: contain;
-          height: 30em;
-          width: 30em;
-          background-color: rgb(246,246,246);
-       }
+        cursor: pointer;
+
+        img {
+            padding: 1em;
+            object-fit: contain;
+            height: 30em;
+            width: 30em;
+            background-color: rgb(246,246,246);
+        }
     }
+
     &__favorites-icon {
-       position: absolute;
-       top: 10px;
-       right: 10px;
-       opacity: 0.6;
-   
-       &:hover{
-         opacity: 1;
-       }
-       img{
-         height: 1.8em;   
-       }
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        opacity: 0.6;
+        cursor: pointer;
+
+        &:hover {
+            opacity: 1;
+        }
+
+        img {
+            height: 1.8em;
+        }
     }
+
     &__cart-icon {
-       position: absolute;
-       top: 40px;
-       right: 11.5px;
-       opacity: 0.6;
-   
-       &:hover{
-          opacity: 1;
-       }
-       img{
-          height: 1.8em;
-       }
+        position: absolute;
+        top: 40px;
+        right: 11.5px;
+        opacity: 0.6;
+        cursor: pointer;
+
+        &:hover {
+            opacity: 1;
+        }
+
+        img {
+            height: 1.8em;
+        }
     }
+
     &__block-discount {
-       position: absolute;
-       bottom: 10px;
-       right: 10px;
-       display: none;
-       justify-content: center;
-       align-items: center;
-       gap: 0.3em;
- 
-       &.hasDiscount{
-          display: inline-flex;
-       }
+        position: absolute;
+        bottom: 10px;
+        right: 10px;
+        display: none;
+        justify-content: center;
+        align-items: center;
+        gap: 0.3em;
+
+        &.hasDiscount {
+            display: inline-flex;
+        }
     }
-    &__name{
-     margin: 1em 0em 0.3em;
-     font-size: 1.2em;
-     color: black;
- 
-     a {
-       color: black;
-     }
+
+    &__name {
+        margin: 1em 0em 0.3em;
+        font-size: 1.2em;
+        color: black;
+        cursor: pointer;
+
+        a {
+            color: black;
+        }
     }
+
     &__block-price {
-       &.hasDiscount{
-          .block-price__price {
-             text-decoration: line-through;
-          }
-          .block-price__discount-price{
-             display: inline-flex;
-          }
-       }
+        &.hasDiscount {
+            .block-price__price {
+                text-decoration: line-through;
+            }
+
+            .block-price__discount-price {
+                display: inline-flex;
+            }
+        }
     }
- }
+}
  .block-discount {
     &__amount {}
     &__icon {
@@ -129,25 +178,28 @@
     }
  }
  @media (max-width: 940px){
-    .favorites { 
-       &__title{
-          margin-left: 0.7em;
-          margin-bottom: 0.7em;
-       }
-       &__block {
-          padding-top: 0em;
-          padding-left: 0.5em;
-          padding-right: 0.5em;
-       } 
-       &__product-cards {
-          grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
-       }
-       &__image {
-          img{
-             height: 25em;
-             width: 25em;
-          }
-       }
+    .favorites {
+        &__title {
+            margin-left: 0.7em;
+            margin-bottom: 0.7em;
+        }
+
+        &__block {
+            padding-top: 0em;
+            padding-left: 0.5em;
+            padding-right: 0.5em;
+        }
+
+        &__product-cards {
+            grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
+        }
+
+        &__image {
+            img {
+                height: 25em;
+                width: 25em;
+            }
+        }
     }
  }
  @media (max-width: 800px){
@@ -194,15 +246,21 @@
     }
  }
  @media (max-width: 440px){
-    .favorites {  
-       &__product-cards {
-          grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
-       }
-       &__image {
-          img{
-             height: 20em;
-             width: 20em;
-          }
-       }
+    .favorites {
+        &__empty-image {
+            height: 125px;
+            width: 125px;
+        }
+
+        &__product-cards {
+            grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
+        }
+
+        &__image {
+            img {
+                height: 20em;
+                width: 20em;
+            }
+        }
     }
  }
