--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -46,23 +46,23 @@
                             <div class="carousel__carousel-item">
                                 <div class="carousel-item__image-block">
                                     <a href="#"><img class="image-block__image" src="data:image/png;base64,@Convert.ToBase64String(productModel.MainPhoto)"></a>
-                                    @if (currentUserState is not null && currentUserState.Identity.IsAuthenticated)
+                                    @if (currentUserState is not null && currentUserState.Identity.IsAuthenticated && userCartProducts is not null && userFavoriteListProducts is not null)
                                     {
-                                        if (currentUser.ListFavourites.Products.Any(favoriteProduct => favoriteProduct.ProductArticle.Model.Id == productModel.Id))
+                                        if (userFavoriteListProducts.Any(favoriteProduct => favoriteProduct.ProductArticle.Model.Id == productModel.Id))
                                         {
-                                            <span class="image-block__favorites" @onclick="() => RemoveProductInUserCart(productModel)"><img src="/icons/header/Slash-heart.svg" alt="Перечеркнутая иконка избранного" title="Удалить из избранного"></span>
+                                            <span class="image-block__favorites" @onclick="() => RemoveProductInUserFavorites(productModel)"><img src="/icons/header/Slash-heart.svg" alt="Перечеркнутая иконка избранного" title="Удалить из избранного"></span>
                                         }
                                         else
                                         {
-                                            <span class="image-block__favorites" @onclick="() => AddProductInUserCart(productModel)"><img src="/icons/header/Heart.svg" alt="Иконка избранного" title="Добавить в избранное"></span>
+                                            <span class="image-block__favorites" @onclick="() => AddProductInUserFavorites(productModel)"><img src="/icons/header/Heart.svg" alt="Иконка избранного" title="Добавить в избранное"></span>
                                         }
-                                        if (currentUser.ListFavourites.Products.Any(favoriteProduct => favoriteProduct.ProductArticle.Model.Id == productModel.Id))
+                                        if (userCartProducts.Any(favoriteProduct => favoriteProduct.ProductArticle.Model.Id == productModel.Id))
                                         {
-                                             <span class="image-block__cart" @onclick="() => RemoveProductInUserFavorites(productModel)"><img src="/icons/header/Cart.svg" alt="Иконка корзины" title="Добавить в корзину"></span> 
+                                             <span class="image-block__cart" @onclick="() => RemoveProductInUserCart(productModel)"><img src="/icons/header/Slash-cart.svg" alt="Иконка корзины" title="Добавить в корзину"></span> 
                                         }
                                         else
                                         {
-                                            <span class="image-block__cart" @onclick="() => AddProductInUserFavorites(productModel)"><img src="/icons/header/Slash-cart.svg" alt="Перечеркнутая иконка корзины" title="Удалить из корзины"></span>
+                                            <span class="image-block__cart" @onclick="() => AddProductInUserCart(productModel)"><img src="/icons/header/Cart.svg" alt="Перечеркнутая иконка корзины" title="Удалить из корзины"></span>
                                         }
                                     }
                                     @*<!-- hasDiscount -->
@@ -95,36 +95,35 @@
             <BlazorSlickCarousel Configurations="configurations">
                 <BlazorSlickCarouselContent>
                     @if (productModelsSection2 is not null)
-                    {
                         @foreach (var productModel in productModelsSection2)
                         {
                             <div class="carousel__carousel-item">
                                 <div class="carousel-item__image-block">
                                     <a href="#"><img class="image-block__image" src="data:image/png;base64,@Convert.ToBase64String(productModel.MainPhoto)"></a>
-                                    @if (currentUserState is not null && currentUserState.Identity.IsAuthenticated)
+                                    @if (currentUserState is not null && currentUserState.Identity.IsAuthenticated && userCartProducts is not null && userFavoriteListProducts is not null)
                                     {
-                                        if (currentUser.ListFavourites.Products.Any(favoriteProduct => favoriteProduct.ProductArticle.Model.Id == productModel.Id))
+                                        if (userFavoriteListProducts.Any(favoriteProduct => favoriteProduct.ProductArticle.Model.Id == productModel.Id))
                                         {
-                                            <span class="image-block__favorites" @onclick="() => RemoveProductInUserCart(productModel)"><img src="/icons/header/Slash-heart.svg" alt="Перечеркнутая иконка избранного" title="Удалить из избранного"></span>
+                                            <span class="image-block__favorites" @onclick="() => RemoveProductInUserFavorites(productModel)"><img src="/icons/header/Slash-heart.svg" alt="Перечеркнутая иконка избранного" title="Удалить из избранного"></span>
                                         }
                                         else
                                         {
-                                            <span class="image-block__favorites" @onclick="() => AddProductInUserCart(productModel)"><img src="/icons/header/Heart.svg" alt="Иконка избранного" title="Добавить в избранное"></span>
+                                            <span class="image-block__favorites" @onclick="() => AddProductInUserFavorites(productModel)"><img src="/icons/header/Heart.svg" alt="Иконка избранного" title="Добавить в избранное"></span>
                                         }
-                                        if (currentUser.ListFavourites.Products.Any(favoriteProduct => favoriteProduct.ProductArticle.Model.Id == productModel.Id))
+                                        if (userCartProducts.Any(favoriteProduct => favoriteProduct.ProductArticle.Model.Id == productModel.Id))
                                         {
-                                            <span class="image-block__cart" @onclick="() => RemoveProductInUserFavorites(productModel)"><img src="/icons/header/Cart.svg" alt="Иконка корзины" title="Добавить в корзину"></span>
+                                            <span class="image-block__cart" @onclick="() => RemoveProductInUserCart(productModel)"><img src="/icons/header/Slash-cart.svg" alt="Иконка корзины" title="Добавить в корзину"></span>
                                         }
                                         else
                                         {
-                                            <span class="image-block__cart" @onclick="() => AddProductInUserFavorites(productModel)"><img src="/icons/header/Slash-cart.svg" alt="Перечеркнутая иконка корзины" title="Удалить из корзины"></span>
+                                            <span class="image-block__cart" @onclick="() => AddProductInUserCart(productModel)"><img src="/icons/header/Cart.svg" alt="Перечеркнутая иконка корзины" title="Удалить из корзины"></span>
                                         }
                                     }
                                     @*<!-- hasDiscount -->
-                                <!--<div class="image-block__discount-block hasDiscount">
-                                    <span class="discount-block__amount">-10%</span>
-                                    <img class="discount-block__icon" src="./icons/index/Discount.svg" alt="Иконка скидки" title="Скидка товара">
-                                </div> *@
+                                    <!--<div class="image-block__discount-block hasDiscount">
+                                        <span class="discount-block__amount">-10%</span>
+                                        <img class="discount-block__icon" src="./icons/index/Discount.svg" alt="Иконка скидки" title="Скидка товара">
+                                    </div> *@
                                 </div>
                                 <a class="carousel-item__title" href="#" aria-label="Перейти в личную карточку товара @productModel.Name">@productModel.Name</a>
                                 <!-- hasDiscount -->
@@ -164,30 +163,30 @@
                             <div class="carousel__carousel-item">
                                 <div class="carousel-item__image-block">
                                     <a href="#"><img class="image-block__image" src="data:image/png;base64,@Convert.ToBase64String(productModel.MainPhoto)"></a>
-                                    @if (currentUserState is not null && currentUserState.Identity.IsAuthenticated)
+                                    @if (currentUserState is not null && currentUserState.Identity.IsAuthenticated && userCartProducts is not null && userFavoriteListProducts is not null)
                                     {
-                                        if (currentUser.ListFavourites.Products.Any(favoriteProduct => favoriteProduct.ProductArticle.Model.Id == productModel.Id))
+                                        if (userFavoriteListProducts.Any(favoriteProduct => favoriteProduct.ProductArticle.Model.Id == productModel.Id))
                                         {
-                                            <span class="image-block__favorites" @onclick="() => RemoveProductInUserCart(productModel)"><img src="/icons/header/Slash-heart.svg" alt="Перечеркнутая иконка избранного" title="Удалить из избранного"></span>
+                                            <span class="image-block__favorites" @onclick="() => RemoveProductInUserFavorites(productModel)"><img src="/icons/header/Slash-heart.svg" alt="Перечеркнутая иконка избранного" title="Удалить из избранного"></span>
                                         }
                                         else
                                         {
-                                            <span class="image-block__favorites" @onclick="() => AddProductInUserCart(productModel)"><img src="/icons/header/Heart.svg" alt="Иконка избранного" title="Добавить в избранное"></span>
+                                            <span class="image-block__favorites" @onclick="() => AddProductInUserFavorites(productModel)"><img src="/icons/header/Heart.svg" alt="Иконка избранного" title="Добавить в избранное"></span>
                                         }
-                                        if (currentUser.ListFavourites.Products.Any(favoriteProduct => favoriteProduct.ProductArticle.Model.Id == productModel.Id))
+                                        if (userCartProducts.Any(favoriteProduct => favoriteProduct.ProductArticle.Model.Id == productModel.Id))
                                         {
-                                            <span class="image-block__cart" @onclick="() => RemoveProductInUserFavorites(productModel)"><img src="/icons/header/Cart.svg" alt="Иконка корзины" title="Добавить в корзину"></span>
+                                            <span class="image-block__cart" @onclick="() => RemoveProductInUserCart(productModel)"><img src="/icons/header/Slash-cart.svg" alt="Иконка корзины" title="Добавить в корзину"></span>
                                         }
                                         else
                                         {
-                                            <span class="image-block__cart" @onclick="() => AddProductInUserFavorites(productModel)"><img src="/icons/header/Slash-cart.svg" alt="Перечеркнутая иконка корзины" title="Удалить из корзины"></span>
+                                            <span class="image-block__cart" @onclick="() => AddProductInUserCart(productModel)"><img src="/icons/header/Cart.svg" alt="Перечеркнутая иконка корзины" title="Удалить из корзины"></span>
                                         }
                                     }
                                     @*<!-- hasDiscount -->
-                                <!--<div class="image-block__discount-block hasDiscount">
-                                    <span class="discount-block__amount">-10%</span>
-                                    <img class="discount-block__icon" src="./icons/index/Discount.svg" alt="Иконка скидки" title="Скидка товара">
-                                </div> *@
+                                    <!--<div class="image-block__discount-block hasDiscount">
+                                        <span class="discount-block__amount">-10%</span>
+                                        <img class="discount-block__icon" src="./icons/index/Discount.svg" alt="Иконка скидки" title="Скидка товара">
+                                    </div> *@
                                 </div>
                                 <a class="carousel-item__title" href="#" aria-label="Перейти в личную карточку товара @productModel.Name">@productModel.Name</a>
                                 <!-- hasDiscount -->
